// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file _redirects can generate an empty file 1`] = `
"## Created with https://github.com/juliomrqz/nuxt-netlify
"
`;

exports[`file _redirects can generate multiple redirects 1`] = `
"## Created with https://github.com/juliomrqz/nuxt-netlify
/google    https://www.google.com    301
/my-redirect    /    302
http://blog.yoursite.com/*    https://www.yoursite.com/blog/:splat    301!
http://blog.yoursite.com/*    https://www.yoursite.com/blog/:splat    302!
/articles    id=:id  tag=:tag    /posts/:tag/:id    301
"
`;

exports[`file _redirects can generate one redirect 1`] = `
"## Created with https://github.com/juliomrqz/nuxt-netlify
/google    https://www.google.com    301
"
`;
